# docs-to-md

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  extract_json.py  requirements.txt
.github/workflows/: ci.yml
changelog.d/: evidence-fusion.added.md  m5-geometry-band.added.md  mrz-0.4.0.changed.md
crates/mlis-cli/: Cargo.toml
crates/mlis-cli/src/: main.rs
crates/mlis-cli/tests/: decrypt_roundtrip.rs
crates/mlis-core/src/: audit.rs
crates/mlis-license/src/: fingerprint.rs
crates/mlis-llm/src/: verify.rs
crates/mlis-ocr/: Cargo.toml
crates/mlis-ocr/src/: download.rs  lib.rs  verify.rs
crates/mlis-ocr/tests/: native_ocr_e2e.rs
crates/mlis-pipeline/: Cargo.toml
crates/mlis-pipeline/src/: lib.rs  ocr.rs
crates/mlis-pipeline/tests/: bridge_e2e.rs  rust_ocr_smoke.rs
crates/mlis-serve/: Cargo.toml
crates/mlis-serve/src/: main.rs
crates/mrz-wasm/: Cargo.toml
crates/synthpass-core/src/: fusion.rs  lib.rs  v2.rs
crates/synthpass-gen/: Cargo.toml
crates/synthpass-gen/tests/: watermark.rs
crates/synthpass-llm/src/: grammar.rs  lib.rs  prompt.rs  repair.rs
crates/synthpass-llm/tests/: parity.rs
crates/synthpass-ocr/src/: lib.rs
crates/synthpass-pipeline/src/: lib.rs
crates/synthpass-serve/src/: main.rs
docker/: Dockerfile.inferer  docker-compose.yml  entrypoint-inferer.sh
docling-app/: Cargo.toml
docling-app/src/: index.html  main.rs
docling-client/: Cargo.toml
docling-client/src/: main.rs
docs/: ARCHITECTURE.md  ROADMAP.md
pipeline/: Cargo.toml
pipeline/src/: lib.rs
python/: bench_inferer.py
python/inferer/: loader.py  prompts.py
samples/: Croatian_passport_data_page.json  Passport_of_Serbia_ID_2009_version.json
