[package]
name = "docling-app"
version.workspace = true
edition.workspace = true

[dependencies]
pipeline = { path = "../pipeline" }
tokio = { workspace = true, features = ["fs", "net"] }
axum = { version = "0.8", features = ["multipart"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
