[package]
name = "mlis-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mlis"
path = "src/main.rs"

[dependencies]
mlis-pipeline = { path = "../mlis-pipeline" }
mlis-core = { path = "../mlis-core", features = ["security"] }
# Only needed here for `mlis doctor`'s model-file/checksum check; the actual
# OCR call goes through mlis-pipeline.
mlis-ocr = { path = "../mlis-ocr", optional = true }
tokio = { workspace = true }
serde_json = "1"

[features]
default = ["ocr-native-rust"]
ocr-native-rust = ["dep:mlis-ocr"]

[dev-dependencies]
base64 = "0.22"
