[package]
name = "mrz-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mrz = { path = "../mrz", features = ["serde"] }
wasm-bindgen = "0.2"
serde_json = "1"

# Current Rust stable emits bulk-memory ops (memory.copy); enable them in
# wasm-pack's bundled wasm-opt so the release optimization pass validates.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O', '--enable-bulk-memory']
