[package]
name = "synthpass-gen"
version.workspace = true
edition.workspace = true

[dependencies]
# The zero-dep ICAO 9303 checksum oracle: this crate reuses `mrz::check_digit`
# to assemble TD3 MRZ lines (see src/mrz_line.rs) and validates its own output
# by round-tripping through `mrz::parse_td3` in tests.
mrz = { path = "../mrz" }
image = { workspace = true }
# Seeded, reproducible identity generation: same seed -> byte-identical output.
rand = "0.10"
rand_chacha = "0.10"
# Glyph rasterization for VIZ/MRZ text, gated behind `embedded-fonts` (see
# src/fonts.rs). Not the deprecated `rusttype`.
ab_glyph = "0.2"

[features]
default = ["embedded-fonts"]
# Bakes fonts/ocr-b.ttf and fonts/sans.ttf into the binary via `include_bytes!`.
# On by default since both fonts are vendored (verified OFL 1.1, see
# fonts/README.md) — `--no-default-features` falls back to placeholder bars
# in the exact layout rects instead of glyphs, for callers who don't want the
# ~480 KB of font bytes baked in. The two ethics guardrails (synthetic
# watermark + generic template) render unconditionally either way.
embedded-fonts = []
